test/corpus/comments.txt
=========
Comments
=========

( one comment )

( multiline
comment
)

()

(

)

---

(source_file
  (comment (comment_content))
  (comment (comment_content))
  (comment)
  (comment (comment_content)))
