test/corpus/runes.txt
======
Runes
======

|10

|0100

"h "i

#10

#1030

@Console &vector $2 &read

---

(source_file
  (absolute_pad)
  (absolute_pad)
  (raw_character)
  (raw_character)
  (literal_hex)
  (literal_hex)
  (label)
  (sub_label)
  (relative_pad))
